# dylint

./: Cargo.toml
.github/workflows/: ci.yml
cargo-dylint/: Cargo.toml
cargo-dylint/src/: main.rs
cargo-dylint/tests/: ci.rs  fix.rs  list.rs
driver/: Cargo.toml
dylint/: Cargo.toml
dylint-link/: Cargo.toml
dylint-link/src/: main.rs
dylint/src/: lib.rs  metadata.rs  toml.rs
examples/await_holding_span_guard/: Cargo.toml
examples/clippy/: Cargo.toml
examples/env_literal/: Cargo.toml
examples/experimental/derive_opportunity/src/: lib.rs
examples/experimental/disallowed_pattern/: Cargo.toml
examples/experimental/disallowed_pattern/src/: config.rs  lib.rs  pattern.rs
examples/general/non_local_effect_before_error_return/: Cargo.toml
examples/general/non_local_effect_before_error_return/src/: lib.rs  visit_error_paths.rs
examples/nonreentrant_function_in_test/: Cargo.toml
examples/path_separator_in_string_literal/: Cargo.toml
examples/question_mark_in_expression/: Cargo.toml
examples/supplementary/unnamed_constant/src/: lib.rs
examples/supplementary/unnecessary_borrow_mut/src/: lib.rs
examples/supplementary/unnecessary_conversion_for_trait/src/: check_inherents.rs
examples/try_io_result/: Cargo.toml
expensive/: Cargo.toml
expensive/tests/: alpine.rs  custom_toolchain.rs
internal/: Cargo.toml
match_hir/: Cargo.toml  clippy.toml
match_hir/assets/: hir.rs
match_hir/reflective_match/: Cargo.toml
match_hir/reflective_match/src/: lib.rs
match_hir/src/: binding.rs  error.rs  lib.rs  span.rs  span_hir_id_map.rs  type_name.rs
match_hir/src/toxic/: unify.rs
match_hir/src/toxic/variables/: mod.rs
match_hir/tests/: meta.rs  reflective_match_exact.stderr  reflective_match_wildcard.stderr
utils/linting/: Cargo.toml
utils/testing/: Cargo.toml
