[package]
name = "match_hir"
version = "0.1.0"
edition = "2021"

build = "build/main.rs"

[dependencies]
paste = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "2.0", features = [
    "extra-traits",
    "full",
    "parsing",
    "visit",
] }
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
quote = "1.0"

[build-dependencies]
inflections = "1.1"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }

[features]
debug-spans = []

[lints]
workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

[profile.release]
debug = true

[workspace]
members = ["reflective_match"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
missing-panics-doc = "allow"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [
    { path = "../examples/general" },
    { path = "../examples/supplementary" },
    { path = "../examples/testing/clippy" },
    { path = "../examples/restriction/*" },
]
