[package]
name = "reflective_match"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "2.0"
dylint_linting = "3.5"

match_hir = { path = "..", features = ["debug-spans"] }

[dev-dependencies]
dylint_testing = "3.5"

[lints]
workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
